[package]
name = "kvant_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = [ "json" ]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rusqlite = "0.25.0"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.37"
lettre = "0.11.6"
